<?xml version="1.0"?>
<package format="2">
  <name>testforopencv</name>
  <version>0.0.0</version>
  <description>The testforopencv package</description>
  <maintainer email="ryan@todo.todo">ryan</maintainer>
  <license>TODO</license>
 <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
    <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>image_transport</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
